<resources>
    <string name="app_name">SpTrans</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lines">Linhas</string>
    <string name="settings">Configurações</string>
    <string name="stops">Paradas</string>
    <string name="search_lines_input_above">Busque no campo acima pelo nome ou número da linha</string>
    <string name="search_for_lines">Busque linhas por termo ou número</string>
    <string name="more_options">Mais opções</string>
    <string name="bus_stop">Paradas</string>
    <string name="search_for_stops">Busque uma parada pelo nome ou end.</string>
    <string name="search_stops_input_above">Busque pela parada digitando o nome ou endereço, completo ou parcial, no campo acima</string>
    <string name="bus_update">Atualizações de ônibus automática</string>
    <string name="update_frequency">Frequência de atualização</string>
    <string name="filters">Filtros</string>
    <string name="see_stops">Ver paradas</string>
    <string name="see_stops_by_lines">Ver paradas da linha</string>
    <string name="see_on_map">Ver no mapa</string>
    <string name="see_time">Ver horários</string>
    <string name="define_route">Definir rota</string>
    <string name="error_get_lines">Não foi possível obter as linhas</string>
    <string name="no_lines_found">Nenhuma linha encontrada</string>
    <string name="error_get_bus_stops">Erro ao obter paradas</string>
    <string name="error_get_vehicle_positions">Falha ao obter posição dos veículos</string>
    <string name="error_get_lines_informations">Falha ao obter informações da linha</string>
    <string name="error_get_bus_stop">Falha ao obter paradas</string>
    <string name="no_bus_stop_found">Nenhuma parada encontrada</string>
    <string name="line">Linha</string>
    <string name="bus_detail">Linha do ônibus</string>
    <string name="error_get_arrival_times">Falha ao obter previsões dos veículos</string>
    <string name="five_seconds">5 segundos</string>
    <string name="ten_seconds">10 segundos</string>
    <string name="fifteen_seconds">15 segundos</string>
    <string name="twenty_seconds">20 segundos</string>
    <string name="click_on_bus">Clique no ônibus para ver detalhes</string>
    <string name="no_lines_favorited_lines">Nenhuma linha favoritada</string>
    <string name="favorited_lines">Linhas favoritadas</string>
    <string name="add_to_favorite">Adicionr às favoritas</string>
    <string name="remove_favorite">Remover dos favoritos</string>
    <string name="line_added_to_favorites">Adicionada aos favoritos</string>
    <string name="favorite_lines">Linhas favoritas</string>

    <string-array name="intervals">
        <item value="5 segundos" />
        <item value="10 segundos" />
        <item value="15 segundos" />
        <item value="30 segundos" />
    </string-array>

</resources>