<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchAutoUpdate"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bus_update"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:id="@+id/llUpdateFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/switchAutoUpdate"
            android:padding="16dp">

            <TextView
                style="@style/TextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_frequency"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/llFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_spinner"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectLabelLayout">

                <Spinner
                    android:id="@+id/spinnerFreqnecy"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>